--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite template</title>
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. Находятся в папке src/partials -->
-    {{> example }}
+  <button type="button" data-action="start">Start</button>
+  <button type="button" data-action="stop">Stop</button>
   </body>
 </html>
